<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="----">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultEdit"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:id="@+id/ButtonRow01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button07"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn07Click"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/button08"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn08Click"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/button09"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn09Click"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnAddClick"
                android:text="@string/button_Add" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn04Click"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/button05"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn05Click"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/button06"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn06Click"
                android:text="@string/button_6" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnMinusClick"
                android:text="@string/button_Minus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="@string/button_1" />

            <Button
                android:id="@+id/button02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn02Click"
                android:text="@string/button_2" />

            <Button
                android:id="@+id/button03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn03Click"
                android:text="@string/button_3" />

            <Button
                android:id="@+id/buttonDivision"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnDivideClick"
                android:text="@string/button_Divisiony" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow04"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnClearClick"
                android:text="@string/button_Clear" />

            <Button
                android:id="@+id/button00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn00Click"
                android:text="@string/button_0" />

            <Button
                android:id="@+id/buttonDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnDotClick"
                android:text="@string/button_Decimal" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnMultiplyClick"
                android:text="@string/button_Multiply" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnResultClick"
            android:text="@string/button_Equals" />

    </LinearLayout>

</RelativeLayout>